# astrape-vst

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT.md  Architecture.md  LICENSE  README.md  RESEARCH.md  analyze_frontend_latency.py  apply_patches.sh  audit_mio_full.py  audit_mio_tokens.py  audit_structure.py  bench_dim.py  bench_latency_amortized.py  bench_latency_breakdown.py  build_voicebank.py  cache.py  cache_wave_targets.py  cache_wavlm_L4_raw.py  cf_finetune.py  check_cache.py  data  demo_v2.py  diag_mcs_axis.py  diagnose_artifact.py  diagnose_frontend_information.py  diagnose_full.py  diagnose_teacher_boundary_risk.py  diagnose_v2.py  eval_compare.py  eval_mcs_trans_audio.py  eval_q2d2_vc.py  eval_stage2.py  eval_wer.py  extract_4k.py  extract_teacher.py  extract_wavlm_targets.py  inspect_voicebank.py  mcs_common.py  (+68 more)
.github/: pull_request_template.md
analysis/: 3次深層監査_BatchB_アーキテクチャ設計_学習力学.md  3차_심층감사_BatchB_아키텍처_학습역학.md
astrape/: __init__.py  audio.py  causal_codec.py  causal_decoder.py  checkpoint.py  curriculum.py  data.py  decoder.py  decoder_v6.py  discriminators.py  encoder.py  encoding_gap.py  fsq.py  mamba.py  mamba_block.py  mcs_model.py  mcs_training.py  mcss_model.py  mcss_training.py  mel_decoder.py  miocodec.py  model.py  nn.py  quantizer.py  streaming_pipeline.py  train_decoder.py  train_decoder_v6.py  train_encoder.py  training.py  voicebank.py  wave_decoder.py
astrape_raw/: progressive_frontend.py  progressive_v2.py  train_raw.py
codex_vc/: README.md  audiodec_stream.py  infer.py  longcat_bench.py  longcat_combi_probe.py  longcat_final.py  longcat_latency.py  longcat_live.py  longcat_origin.py  longcat_probe.py  longcat_quality.py  model.py  test_longcat.py  train.py  train_ad_stream.py
docs/: README.md  convergence_analysis.md  e2e_streaming_pipeline.md  latency_waveform_plan.md
flowvc/: __init__.py  audiodec.py  audiodec_vc.py  blocks.py  cfm_loss.py  config.py  converter.py  decoder.py  disentangle.py  distiller.py  ecapa.py  encoder.py  experiments.py  infer.py  mimi_converter.py  mimi_splitter.py  prosody.py  test_converter.py  test_improved.py  test_res2.py  test_resemblyzer.py  train.py  train_mimi_splitter.py  train_vc_system.py
hybridvc/: __init__.py
mimi_codec/: README.md  cached_dataset.py  code_predictor.py  mimi_latent_converter.py  mimi_qspace_vc.py  mimi_splitter.py  mimi_splitter_vc.py  mimi_vc_system.py  test_fast.py  (+6 more)
(+22 files in other folders)
