[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "astrape-vc"
version = "0.3.0"
description = "Real-time causal zero-shot voice conversion"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "torch>=2.2",
  "torchaudio>=2.2",
]

[tool.setuptools.packages.find]
include = ["astrape*"]
