[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "astrape-vc"
version = "0.3.0"
description = "Real-time causal zero-shot voice conversion"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "torch>=2.2",
  "torchaudio>=2.2",
  "jsonargparse>=4.0",
  "einops>=0.8",
]

[tool.setuptools.packages.find]
include = ["astrape*"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-timeout>=2.3",
    "ruff>=0.11.0",
    "mypy>=1.15",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do-not-perform-function-calls-in-argument-defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
